--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,181 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Montserrat;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  background: white;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 0 3px rgb(10, 71, 94);
+  font-family: Montserrat;
+  margin: 10px;
+  padding: 2px 7px 2px 7px;
+}
+
+.form-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: space-evenly;
+  width: 700px;
+  height: 220px;
+  padding: 30px 20px 30px 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgb(147, 186, 209);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.form input {
+  margin: 0;
+}
+
+.friend-form {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgb(147, 186, 209);
+}
+
+.friend-form input {
+  float: right;
+}
+
+.memory-form {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 550px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgb(147, 186, 209);
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar {
+  height: 5rem;
+}
+
+.friends-page {
+  display: flex;
+  flex-direction: row;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  gap: 20px;
+  overflow-y: scroll;
+  padding: 20px;
+  max-height: 38.5rem;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 20px;
+  gap: 20px;
+}
+
+.card {
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgb(147, 186, 209);
+  margin: 0 auto;
+  padding: 20px;
+  width: 85%;
+}
+
+.card img {
+  width: 70%;
+  margin: auto;
+}
+
+.centered {
+  text-align: center;
+}
+
+.italic {
+  font-style: italic;
+}
+
+h2, h4, input, p {
+  margin: 0 0 10px 0;
+}
+
+.error {
+  color: red;
+  background: mistyrose;
+  text-align: center;
+}
+
+.message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#right {
+  position: absolute;
+  right: 10px;
+}
+
+#left {
+  position: absolute;
+  left: 10px;
+}
+
+#logout-button {
+  position: absolute;
+  top: 0;
+  right: 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#logout-button h4, #logout-button button {
+  margin: 20px 20px 0 0;
+}
+
+.min-width {
+  width: auto;
+}
+
+input {
+  padding: 2px;
+  font-family: Montserrat;
+  width: 200px;
+}
+
+h1 {
+  text-align: center;
+  margin: 20px 0 0 0;
+}
+
+hr {
+  margin: 0;
 }
